# galaxy-morph

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conda-lock.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
scripts/: compute_normalization_stats.py
src/galaxy_morph/: cli.py
src/galaxy_morph/data/: datasets.py  download.py  splits.py  transform.py
tests/: test_splits.py  test_transform.py
