[project]
name = "galaxy-morph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "torchvision",
  "numpy",
  "astropy",
  "hydra-core",
  "wandb",
  "fastapi",
  "pydantic>=2",
  "typer",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galaxy_morph"]

# ─── ruff ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",      # pycodestyle errors/warnings
  "F",           # pyflakes (unused imports, undefined names)
  "I",           # isort (import ordering)
  "B",           # bugbear (likely bugs)
  "UP",          # pyupgrade (modernize syntax)
  "N",           # pep8-naming
  "SIM",         # simplify
  "RUF",         # ruff-specific rules
  "NPY",         # numpy-specific rules
  "PD",          # pandas-specific rules
  "PT",          # pytest style
]
ignore = [
  "E501",        # line too long — formatter handles this
  "N803",        # argument name should be lowercase
  "N806",        # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]    # allow `assert` in tests
"notebooks/*" = ["E402", "F401"]  # notebooks have weird import patterns

[tool.ruff.format]
quote-style = "double"
indent-style = "space"