[project]
name = "galaxy-morph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "torchvision",
  "numpy",
  "astropy",
  "hydra-core",
  "wandb",
  "fastapi",
  "pydantic>=2",
  "typer",
  "sklearn",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-requests",
    "types-tqdm",
]

[project.scripts]
galaxy-morph = "galaxy_morph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galaxy_morph"]

# ─── ruff ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W",      # pycodestyle errors/warnings
  "F",           # pyflakes (unused imports, undefined names)
  "I",           # isort (import ordering)
  "B",           # bugbear (likely bugs)
  "UP",          # pyupgrade (modernize syntax)
  "N",           # pep8-naming
  "SIM",         # simplify
  "RUF",         # ruff-specific rules
  "NPY",         # numpy-specific rules
  "PD",          # pandas-specific rules
  "PT",          # pytest style
]
ignore = [
  "E501",        # line too long — formatter handles this
  "N803",        # argument name should be lowercase
  "N806",        # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]    # allow `assert` in tests
"notebooks/*" = ["E402", "F401"]  # notebooks have weird import patterns

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── mypy ──────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_redundant_casts = true
show_error_codes = true
pretty = true

# Third-party libraries without type stubs — don't fail on them
[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "wandb.*",
  "hydra.*",
  "escnn.*",
  "matplotlib.*",
  "typer.*",
  "sklearn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "galaxy_morph.cli"
disable_error_code = ["misc"]
# Tests can be looser
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ─── pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "--strict-markers",      # typos in marker names fail loudly
  "--strict-config",
  "-ra",                   # show short summary of all non-passing tests
  "--cov=galaxy_morph",
  "--cov-report=term-missing",
  "--cov-report=xml",      # for CI/codecov
]
markers = [
  "slow: tests that take >5s (deselect with '-m \"not slow\"')",
  "gpu: tests that require a GPU",
  "integration: tests that hit the real dataset or network",
]
filterwarnings = [
  "error",                          # treat warnings as errors by default
  "ignore::DeprecationWarning:torch.*",  # but ignore noisy upstream ones
]
